# event_driven_notification_system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/db-migrate/: Dockerfile
infra/kafka/: create-topics.sh
infra/postgres/: init.sql
scripts/: demo.py
services/delivery_worker/: Dockerfile  pyproject.toml
services/delivery_worker/src/delivery_worker/: celery.py  config.py  log.py  rate_limiter.py  status_publisher.py  tasks.py
services/delivery_worker/src/delivery_worker/providers/: __init__.py  base.py  email.py  push.py  sms.py
services/delivery_worker/tests/: conftest.py  test_providers.py  test_rate_limiter.py  test_tasks.py
services/event_gateway/: Dockerfile  pyproject.toml
services/event_gateway/src/event_gateway/: __main__.py  app.py  config.py  log.py  producer.py  routes.py  wsgi.py
services/event_gateway/tests/: conftest.py  test_routes.py
services/notification_service/: Dockerfile  pyproject.toml
services/notification_service/src/notification_service/: __main__.py  config.py  consumer.py  handler.py  log.py  priority.py  producer.py  quiet_hours.py  renderer.py
services/notification_service/tests/: conftest.py  test_handler.py  test_priority.py  test_quiet_hours.py  test_renderer.py
shared/: pyproject.toml
shared/alembic/: env.py
shared/alembic/versions/: 0001_create_tables.py  0002_seed_templates.py
shared/schemas/: event_types.py  events.py  order_events.py  payments_events.py  user_events.py
shared/src/shared/: __init__.py  config.py  enums.py  kafka.py  log.py
shared/src/shared/db/: __init__.py  base.py  models.py  repositories.py  types.py
shared/src/shared/events/: __init__.py  base.py  payloads.py  typed.py
shared/tests/: conftest.py  test_config.py  test_db_models.py  test_db_repositories.py  test_enums.py  test_events.py
tests/integration/: conftest.py  helpers.py  test_full_flow.py  test_idempotency.py  test_priority_ordering.py  test_retry_on_failure.py  test_user_preferences.py
