[project]
name = "event-driven-notification-system"
version = "0.1.0"
description = "Event-driven notification system monorepo"
requires-python = ">=3.12"

[project.optional-dependencies]
integration-test = [
    "shared",
    "event-gateway",
    "notification-service",
    "delivery-worker",
    "pytest>=8.0",
    "testcontainers[kafka,postgres,redis]>=4.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.27",
    "alembic>=1.14,<2.0",
]

[tool.uv.workspace]
members = [
    "shared",
    "services/*",
]

[tool.uv.sources]
shared = { workspace = true }
event-gateway = { workspace = true }
notification-service = { workspace = true }
delivery-worker = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "shared/tests",
    "services/event_gateway/tests",
    "services/notification_service/tests",
    "services/delivery_worker/tests",
    "tests/integration",
]
markers = [
    "integration: Integration tests requiring Docker (testcontainers)",
]
