[project]
name = "delivery-worker"
version = "0.1.0"
description = "Celery workers for notification delivery via email, SMS, push"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "celery>=5.4,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delivery_worker"]
