[project]
name = "delivery-worker"
version = "0.1.0"
description = "Celery workers for notification delivery via email, SMS, push"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "celery>=5.4,<6.0",
    "pydantic-settings>=2.0,<3.0",
    "redis>=5.0,<6.0",
    "confluent-kafka>=2.6,<3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delivery_worker"]
