[project]
name = "event-gateway"
version = "0.1.0"
description = "HTTP entry point for external events — validates and routes to Kafka"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "flask>=3.0,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_gateway"]
