[project]
name = "event-gateway"
version = "0.1.0"
description = "HTTP entry point for external events — validates and routes to Kafka"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "flask>=3.0,<4.0",
    "confluent-kafka>=2.6,<3.0",
    "gunicorn>=23.0,<24.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_gateway"]
