[project]
name = "notification-service"
version = "0.1.0"
description = "Kafka consumer that creates delivery tasks based on events"
requires-python = ">=3.12"
dependencies = [
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notification_service"]
